switch to real services query search

--- a/index.html
+++ b/index.html
@@ -42,17 +42,31 @@
     <script type="text/x-handlebars" id="components/customer-services">
       {{#if services}}
         <div class="panel panel-default">
-          <ul class="list-unstyled">
-            {{#each services key="id" as |service|}}
-              <li>{{service.name}} {{#link-to 'service' service}}Upravit{{/link-to}}</li>
+            <table class="table table-striped">
+            <tbody>
+            {{#each services as |service|}}
+              <tr>
+                <td>{{service.agreement}}</td>
+                <td>{{service.customer_name}}</td>
+                <td>{{service.customer_info}}</td>
+                <td>{{service.service_id}}</td>
+                <td>{{service.service_name}}</td>
+                <td>{{service.download}}/{{service.upload}} Mbps</td>
+                <td>{{service.price}}</td>
+                <td>{{service.street}}</td>
+                <td>{{service.city}}</td>
+                <td>{{service.service_info}}</td>
+                <td>{{#link-to 'service' service}}Upravit{{/link-to}}</td>
+              </tr>
             {{/each}}
-          </ul>
+            </tbody>
+          </table>
         </div>
       {{/if}}
     </script>
 
     <script type="text/x-handlebars" id="service">
-      <h3>{{model.id}} {{model.name}} {{model.city}}</h3>
+      <h3>{{model.service_id}} {{model.service_name}} {{model.city}}</h3>
     </script>
 
     <script type="text/javascript" language="JavaScript" src="js/jquery.min.js"></script>
