fix back button link on the page

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <script type="text/x-handlebars">
       <nav class="navbar navbar-default" role="navigation">
         <div class="container">
-          <a class="navbar-brand" href="#">Zpět</a>
+          <a class="navbar-brand" href="..">Zpět</a>
           <a class="navbar-brand" href="#/services">Služby</a>
           <div class="navbar-right navbar-brand">
             <span class='glyphicon glyphicon-user'></span>
