--- a/index.html
+++ b/index.html
@@ -3,65 +3,63 @@
   <head>
     <title>SilesNet IS</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="css/bootstrap-theme.min.css">
+    <link rel="stylesheet" type="text/css" href="css/material.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" type="text/css" href="css/jquery-ui.min.css">
     <link rel="stylesheet" type="text/css" href="css/app.css">
   </head>
   <body>
-    <div id='app'></div>
-
-    <script type="text/x-handlebars">
-      <nav class="navbar navbar-default" role="navigation">
-        <div class="container">
-          <a class="navbar-brand" href="..">Zpět</a>
-          <a class="navbar-brand" href="#/services">Služby</a>
-          <div class="navbar-right navbar-brand">
-            <span class='glyphicon glyphicon-user'></span>
-            {{model.user.name}}|{{model.user.operation_country}}
+    <div id="app"></div>
+    
+      <script type="text/x-handlebars">
+        <div class="mdl-layout--fixed-header">
+        <header class="mdl-layout__header">
+          <div class="mdl-layout__header-row">
+            <nav class="mdl-navigation">
+              <a class="mdl-navigation__link" href="..">Zpět</a>
+              <a class="mdl-navigation__link" href="#/services">Seznam služeb</a>
+            </nav>
+            <div class="mdl-layout-spacer"></div>
+            <nav class="mdl-navigation">
+              <i class="material-icons">face</i><a class="mdl-navigation__link">{{model.user.name}} | {{model.user.operation_country}}</a>
+            </nav>
           </div>
+        </header>
+        <main class="mdl-layout__content mdl-main-content">
+          <div class="mdl-grid">{{outlet}}</div>
+        </main>
         </div>
-      </nav>
-      <div class="content">
-        <div class="container">
-          {{outlet}}
-        </div>
-      </div>
-    </script>
-
+      </script>
+    
     <script type="text/x-handlebars" id="services">
-      <div class="input-group">
-        {{input id="service_search" class="form-control" type="text" value=model.query placeholder="Customer or Agreement" autofocus="true"}}
-        <div class="input-group-btn">
-          <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+        <div class="mdl-textfield mdl-srch-textfield mdl-js-textfield">
+          {{input id="service_search" class="mdl-textfield__input" type="text" value=model.query autofocus="true"}}
+          <label class="mdl-textfield__label" for="service_search">Hledej zákazníka</label>
         </div>
-      </div>
       {{customer-services services=model.services}}
     </script>
 
     <script type="text/x-handlebars" id="components/customer-services">
       {{#if services}}
-        <div class="panel panel-default">
-            <table class="table table-striped">
+            <table class="mdl-data-table mdl-js-data-table">                                                                                
             <tbody>
             {{#each services as |service|}}
               <tr>
                 <td>{{service.agreement}}</td>
-                <td>{{service.customer_name}}</td>
+                <td class="mdl-data-table__cell--non-numeric name">{{service.customer_name}}</td>
                 <td>{{service.customer_info}}</td>
                 <td>{{service.service_id}}</td>
-                <td>{{service.service_name}}</td>
-                <td>{{service.download}}/{{service.upload}} Mbps</td>
+                <td class="mdl-data-table__cell--non-numeric">{{service.service_name}}</td>
+                <td class="mdl-data-table__cell--non-numeric">{{service.download}}/{{service.upload}} Mbps</td>
                 <td>{{service.price}}</td>
-                <td>{{service.street}}</td>
-                <td>{{service.city}}</td>
-                <td>{{service.service_info}}</td>
-                <td>{{#link-to 'service' service}}Upravit{{/link-to}}</td>
+                <td class="mdl-data-table__cell--non-numeric">{{service.street}}</td>
+                <td class="mdl-data-table__cell--non-numeric">{{service.city}}</td>
+                <td class="mdl-data-table__cell--non-numeric">{{service.service_info}}</td>
+                <td>{{#link-to 'service' service}}<button class="mdl-button mdl-js-button mdl-button--fab mdl-button--micro-fab mdl-button--colored"><i class="material-icons">edit</i></button>{{/link-to}}</td>
               </tr>
             {{/each}}
             </tbody>
           </table>
-        </div>
       {{/if}}
     </script>
 
@@ -73,7 +71,7 @@
     <script type="text/javascript" language="JavaScript" src="js/jquery-ui.min.js"></script>
     <script type="text/javascript" language="JavaScript" src="js/jquery-ui-datepicker-cs.js"></script>
     <script type="text/javascript" language="JavaScript" src="js/jquery-cookie.min.js"></script>
-    <script type="text/JavaScript" language="JavaScript" src="js/bootstrap.min.js"></script>
+    <script type="text/JavaScript" language="JavaScript" src="js/material.min.js"></script>
     <script type="text/JavaScript" language="JavaScript" src="js/ember.js"></script>
     <!--<script type="text/JavaScript" language="JavaScript" src="js/ember-data.js"></script>-->
     <script type="text/JavaScript" language="JavaScript" src="js/ember-template-compiler.js"></script>
