Fix PPPoE label

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       {{#if model.pppoe.id}}
         <div class="pppoe">
           <h4>PPPoE</h4>
-          <p>{{model.pppoe.master}}/{{model.pppoe.interface}}</p>
+          <p>Master/Interface {{model.pppoe.master}}/{{model.pppoe.interface}}</p>
           <p>IP/MAC {{model.pppoe.address}}/{{model.pppoe.mac}}</p>
           <p>Uživatel/Heslo {{model.pppoe.username}}/{{model.pppoe.password}}</p>
         </div>
