--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
       <div class="content">
         <div class="container">
           {{outlet}}
+          {{outlet 'modal'}}
         </div>
       </div>
     </script>
@@ -71,21 +72,63 @@
       <h3>{{model.service.id}} {{model.service.name}} {{model.service.download}}/{{model.service.upload}} Mbs</h3>
       <p>{{model.service.info}}</p>
       {{#if model.dhcp.port}}
-        <div class="dhcp">
-          <h4>DHCP</h4>
-          <p>Switch/Port {{model.dhcp.switch.name}}/{{model.dhcp.port}}</p>
+        <div class="row"><div class="col-md-4">
+        <div class="panel panel-default">
+          <div class="panel-heading">
+            <h3 class="panel-title pull-left">DHCP</h3>
+            <button class="btn btn-default pull-right" {{action 'openModal' 'editDhcp' model}}>Upravit</button>
+            <div class="clearfix"></div>
+          </div>
+          <div class="panel-body">
+            <div class="row">
+              <div class="col-md-4"><p class="text-right"><strong>Switch</strong></p></div>
+              <div class="col-md-6">{{model.dhcp.switch.name}}</div>
+            </div>
+            <div class="row">
+              <div class="col-md-4"><p class="text-right"><strong>Port</strong></p></div>
+              <div class="col-md-6">{{model.dhcp.port}}</div>
+            </div>
+          </div>
         </div>
+        </div>
+        </div>
+
       {{/if}}
       {{#if model.pppoe.id}}
-        <div class="pppoe">
-          <h4>PPPoE</h4>
+        <div class="panel panel-default">
+          <div class="panel-heading">PPPoE</div>
+          <div class="panel-body">
           <p>Master/Interface {{model.pppoe.master}}/{{model.pppoe.interface}}</p>
           <p>IP/MAC {{model.pppoe.address}}/{{model.pppoe.mac}}</p>
           <p>Uživatel/Heslo {{model.pppoe.username}}/{{model.pppoe.password}}</p>
+          </div>
         </div>
       {{/if}}
       {{#link-to 'services'}}Zpět{{/link-to}}
     </script>
+
+    <script type="text/x-handlebars" data-template-name="editDhcp">
+      {{#modal-dialog action="close"}}
+        <p>DEMO (nefunkční)</p>
+        <p>Upravit DHCP pro {{model.service.id}} {{model.service.name}}</p>
+        {{view "select"
+           content=model.switches
+           optionValuePath="content.id"
+           optionLabelPath="content.name"
+           value=model.dhcp.switch.id}}
+        {{input value=model.dhcp.port type=number}}
+        <button {{action "close"}}>Zrušit</button>
+      {{/modal-dialog}}
+    </script>
+
+    <script type="text/x-handlebars" data-template-name="components/modal-dialog">
+      <div class="em-overlay"></div>
+      <div class="em-modal">
+        <div class="content">
+          {{yield}}
+        </div>
+      </div>
+    </script>  
 
     <script type="text/javascript" language="JavaScript" src="js/jquery.min.js"></script>
     <script type="text/javascript" language="JavaScript" src="js/jquery-ui.min.js"></script>
