--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
     </script>
 
     <script type="text/x-handlebars" data-template-name="components/modal-form">
-      <div class="modal fade">
+      <div class="modal">
         <div class="modal-dialog">
           <div class="modal-content">
             <div class="modal-header">
