--- a/index.html
+++ b/index.html
@@ -118,13 +118,14 @@
 
     <script type="text/x-handlebars" data-template-name="formEditDhcp">
       {{#modal-form title='Upravit' ok='submit' close='closeModal'}}
-        <p>DEMO (nefunkční)</p>
-        <p>Upravit DHCP pro {{model.form.service.id}} {{model.form.service.name}}</p>
+        <p>DHCP pro {{model.form.service.id}} {{model.form.service.name}}</p>
+        <label>Switch</label>
         {{view "select"
            content=switches
            optionValuePath="content.id"
            optionLabelPath="content.name"
            value=model.form.dhcp.network_id}}
+        <label>Port</label>
         {{input value=model.form.dhcp.port type=number}}
       {{/modal-form}}
     </script>
