Add link to new CRM pages

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <div class="container">
           <a class="navbar-brand" href="..">Home</a>
           <a class="navbar-brand" href="#/services">Služby</a>
+          <a class="navbar-brand" href="http://localhost:9090">Přidej službu</a>
           <a class="navbar-brand" href="#/changelog"><span class="small">Sezam změn</span></a>
           <div class="navbar-right navbar-brand">
             <span class='glyphicon glyphicon-user'></span>
