--- a/index.html
+++ b/index.html
@@ -184,14 +184,16 @@
         {{flash.message}}
       {{/if}}
     </script>
-    
+  
     <script type="text/javascript" language="JavaScript" src="js/jquery.min.js"></script>
     <script type="text/javascript" language="JavaScript" src="js/jquery-ui.min.js"></script>
     <script type="text/javascript" language="JavaScript" src="js/jquery-ui-datepicker-cs.js"></script>
     <script type="text/JavaScript" language="JavaScript" src="js/bootstrap.min.js"></script>
     <script type="text/JavaScript" language="JavaScript" src="js/ember.js"></script>
-    <!--<script type="text/JavaScript" language="JavaScript" src="js/ember-data.js"></script>-->
     <script type="text/JavaScript" language="JavaScript" src="js/ember-template-compiler.js"></script>
     <script type="text/JavaScript" language="JavaScript" src="js/app.js"></script>
+    <script type="text/JavaScript" language="JavaScript" src="js/app-services.js"></script>
+    <script type="text/JavaScript" language="JavaScript" src="js/app-components.js"></script>
+    <script type="text/JavaScript" language="JavaScript" src="js/app-util.js"></script>
   </body>
 </html>
