--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
 
     <script type="text/x-handlebars" id="services">
       <div class="input-group">
+        <span class="input-group-addon" title="Neaktivní klienti">
+            {{input type="checkbox" name="isActive" checked=model.isActive aria-label="Neaktivní klienti"}}
+        </span>
         {{input id="service_search" class="form-control" type="text" value=model.query placeholder="Customer or Agreement" autofocus="true"}}
         <div class="input-group-btn">
           <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
