--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
 
     <script type="text/x-handlebars" id="services">
       <div class="input-group">
-        <span class="input-group-addon" title="Neaktivní klienti">
-            {{input type="checkbox" name="isActive" checked=model.isActive aria-label="Neaktivní klienti"}}
+        <span class="input-group-addon" title="Aktivní zákazníci">
+            {{input type="checkbox" name="isActive" checked=model.isActive aria-label="Aktivní zákazníci"}}
         </span>
         {{input id="service_search" class="form-control" type="text" value=model.query placeholder="Customer or Agreement" autofocus="true"}}
         <div class="input-group-btn">
